[tool.poetry]
name = "nlp-assignment-2025"
version = "0.1.0"
description = ""
authors = ["jimsym4 <dimitrisymeonidis@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.0"
scikit-learn = "^1.5.0"
torch = "^2.3.0"
transformers = "^4.41.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
nltk = "^3.8.1"
tqdm = "^4.66.0"
language-tool-python = "^2.7.1"
numpy = "^1.26.4"
spacy = "^3.7.0"
sentencepiece = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"